--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "start": "node --optimize_for_size --max_old_space_size=460 --inspect=8080 && vue-cli-service serve",
     "serve": "vue-cli-service serve",
+    "local-serve": "vue-cli-service serve --mode local",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.4.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "sass": "^1.55.0",
